--- a/Internship Report V2/main.tex
+++ b/Internship Report V2/main.tex
@@ -5,14 +5,9 @@
 \pagestyle{fancy}
 
 
-
-
-
-
-
 \begin{document}
 
-\input{title_page.tex}
+\input{Title_page.tex}
 
 
 \tableofcontents
@@ -30,7 +25,7 @@
 \include{Configuring Networks with NETCONF}
 \include{Conclusion}
 
-\bibliographystyle{abbrv}
+\bibliographystyle{plain}
 \bibliography{references} % need to put bibtex references in references.bib 
 \include{Annexes}
 \end{document}
