--- a/Internship Report V2/references.bib
+++ b/Internship Report V2/references.bib
@@ -78,5 +78,86 @@
 	title = {{A}n {I}ntroduction to {N}{E}{T}{C}{O}{N}{F}/{Y}{A}{N}{G} - {F}ir3net --- fir3net.com},
 	howpublished = {\url{https://www.fir3net.com/Networking/Protocols/an-introduction-to-netconf-yang.html#Introduction}},
 	year = {},
-	note = {[Accessed 22-08-2023]},
+	note = {[Accessed 06-12-2023]},
+}
+@misc{huawei,
+    author = {},
+    title = {Relationships Between NETCONF, YANG, and XML},
+    howpublished = {\url{https://forum.huawei.com/enterprise/en/relationships-between-netconf-yang-and-xml/thread/667282109519249408-667213883565289474}},
+    month = {},
+    year = {},
+    note = {(Accessed on 07/05/2023)}
+}
+
+@misc{RFC6241N8,
+    author = {},
+    title = {RFC 6241: Network Configuration Protocol (NETCONF)},
+    howpublished = {\url{https://www.rfc-editor.org/rfc/rfc6241}},
+    month = {},
+    year = {},
+    note = {(Accessed on 07/12/2023)}
+}
+@misc{techrpc,
+    author = {},
+    title = {What Is Remote Procedure Call (RPC)? Definition from SearchAppArchitecture},
+    howpublished = {\url{https://www.techtarget.com/searchapparchitecture/definition/Remote-Procedure-Call-RPC}},
+    month = {},
+    year = {},
+    note = {(Accessed on 05/25/2023)}
+}
+@misc{RFC6241N71,
+    author = {},
+    title = {RFC 6241: Network Configuration Protocol (NETCONF)},
+    howpublished = {\url{https://www.rfc-editor.org/rfc/rfc6241#appendix-B}},
+    month = {},
+    year = {},
+    note = {(Accessed on 07/10/2023)}
+}
+@misc{GNS3,
+    author = {},
+    title = {What is GNS3? | What Does it Do? | SYSNETTECH Solutions},
+    howpublished = {\url{https://www.sysnettechsolutions.com/en/what-is-gns3/}},
+    month = {},
+    year = {},
+    note = {(Accessed on 07/12/2023)}
+}
+@misc{DynamicHCP,
+    author = {},
+    title = {Dynamic Host Configuration Protocol (DHCP) | Microsoft Learn},
+    howpublished = {\url{https://learn.microsoft.com/en-us/windows-server/networking/technologies/dhcp/dhcp-top}},
+    month = {},
+    year = {},
+    note = {(Accessed on 07/01/2023)}
+}
+@misc{DHCP,
+    author = {},
+    title = {How to Configure Cisco Router as DHCP Server? – GetLabsDone},
+    howpublished = {\url{https://getlabsdone.com/configure-cisco-router-as-dhcp-server/}},
+    month = {},
+    year = {},
+    note = {(Accessed on 06/05/2023)}
+}
+@misc{SSH,
+    author = {},
+    title = {What is SSH (Secure Shell) and How Does it Work? Definition from TechTarget},
+    howpublished = {\url{https://www.techtarget.com/searchsecurity/definition/Secure-Shell}},
+    month = {},
+    year = {},
+    note = {(Accessed on 08/06/2023)}
+}
+@misc{SSH2,
+    author = {},
+    title = {SSH/OpenSSH/Configuring - Community Help Wiki},
+    howpublished = {\url{https://help.ubuntu.com/community/SSH/OpenSSH/Configuring}},
+    month = {},
+    year = {},
+    note = {(Accessed on 06/25/2023)}
+}
+@misc{github,
+author = {Nabil ECH-CHOKHMANY},
+title = {Nabil-Ech/NETCONF: It's the subject of my Internship in Spain at the University of Cantabria. My goal is to use GNS3 to deploy simple network topologies and develop simple software to remotely change device operation using NETCONF},
+howpublished = {\url{https://github.com/Nabil-Ech/NETCONF}},
+month = {},
+year = {},
+note = {(Accessed on 08/26/2023)}
 }
