--- a/Internship Report V2/Annexes.tex
+++ b/Internship Report V2/Annexes.tex
@@ -1,5 +1,8 @@
-\chapter{Annex}
-\section{Annex A: Project Code}
+\chapter*{Appendix}
+\addcontentsline{toc}{chapter}{Appendix} % Add the appendix to the table of contents
+
+% Include the appendix content
+\section{Appendix A: Supporting Documents for the Project Code}
 
 
 \begin{lstlisting}[style=pythonStyle, caption={Automated Subnet Allocation.}, backgroundcolor=\color{codebackground}]
@@ -122,7 +125,7 @@ with manager.connect(
 \end{lstlisting}
 
 
-\section{Annex B: Router configuration}
+\section{Appendix B: Supporting Documents for Router Configuration}
 
 \begin{lstlisting}[style=cliStyle, caption={Configure DHCP.},  backgroundcolor=\color{codebackground}]
 configure terminal
