--- a/Internship Report V2/Conclusion.tex
+++ b/Internship Report V2/Conclusion.tex
@@ -1,4 +1,5 @@
-\chapter{Conclusion}
+\chapter*{Conclusion}
+\addcontentsline{toc}{chapter}{Conclusion}
 
 
 During the course of this internship, I had the valuable opportunity to delve into the world of network automation and configuration management using NETCONF and YANG in a virtual network environment with GNS3. Working with Cisco CSR1000v routers and Python's ncclient library, I explored the possibilities of automating network configurations and harnessing the power of YANG data modeling.
