--- a/Internship Report V2/Configuring Networks with NETCONF.tex
+++ b/Internship Report V2/Configuring Networks with NETCONF.tex
@@ -151,7 +151,7 @@ To ensure effective allocation of sub-networks within this shared IP pool, a sys
 
 In this section, we will focus on the automation and, leveraging tools like the Python script provided in this report, the  allocation process can be streamlined. We will create a script that enables network administrators to input the desired number of IP addresses for each sub-network, and based on this information, it calculates the appropriate range of addresses and assigns them accordingly. The generated sub-networks can be further configured with relevant network parameters such as masks, DHCP server networks, and default routers.
 
-The proposed solution offers a practical and efficient method for managing a large-scale network infrastructure within an institution. It provides the flexibility to allocate IP addresses based on individual sub-network requirements, ensuring optimized utilization of IP addresses while maintaining a coherent and manageable network architecture. This approach promotes scalability, adaptability, and ease of network administration, making it well-suited for complex environments like universities and other large institutions.
+The proposed solution offers a practical and efficient method for managing a large-scale network infrastructure within an institution. It provides the flexibility to allocate IP addresses based on individual sub-network requirements, ensuring optimized utilization of IP addresses while maintaining a coherent and manageable network architecture. This approach promotes scalability, adaptability, and ease of network administration, making it well-suited for complex environments like universities and other large institutions \cite{chat}.
 
 \subsection{Solving the Subnet Allocation Challenge}
 
@@ -194,7 +194,7 @@ The proposed solution offers a practical and efficient method for managing a lar
 
 \subsection{Example: Router IP Address Requirement Assessment and Subnet Allocation}
 
-To illustrate the process of router IP address requirement assessment and address allocation, let's consider a scenario with four routers in a large institution network. Each router has a specific number of IP addresses required for its operations, and we have a general subnet available for allocation.
+To illustrate the process of router IP address requirement assessment and address allocation, let's consider a scenario with four routers in a large institution network. Each router has a specific number of IP addresses required for its operations, and we have a general subnet available for allocation \cite{chat}.
 
 \subsubsection{Router Information:}
 \begin{itemize}
