--- a/Internship Report V2/Implementation.tex
+++ b/Internship Report V2/Implementation.tex
@@ -49,6 +49,8 @@ Switches are network devices that operate at the data link layer (Layer 2) of th
 
 In GNS3, a \gls{VPC} is a simulated computer that represents an endpoint device within a network topology, or a user. It is a virtual machine (VM) running a specific operating system that emulates the behavior and functionalities of a physical computer. Virtual PCs are used in GNS3 to simulate the interaction between network devices and end-user devices, allowing us to test and troubleshoot network configurations.
 
+\pagebreak
+
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.4\linewidth]{Images/vpc.png}
@@ -72,6 +74,8 @@ In our case, we utilize the Cloud appliance to communicate the NETCONF client ru
 \subsubsection{Network topology:}
 
 Therefore, the resulting network topology will be as follows:
+
+\pagebreak
 
 \begin{figure}[!h]
     \centering
