--- a/Internship Report V2/Introduction.tex
+++ b/Internship Report V2/Introduction.tex
@@ -7,7 +7,7 @@ The management of modern communication networks is essential to ensure optimal p
 
 One of the key protocols used in \gls{SDN} is \gls{NETCONF}. \gls{NETCONF}, defined by the \gls{IETF}, is a standardized protocol that enables secure and efficient configuration and management of network devices. It provides a programmatic interface for accessing and modifying device configurations, monitoring device state, and retrieving operational data.
 
-During this internship at the University of Cantabria under the supervision of Luis, the objective was to gain hands-on experience in network management using \gls{SDN} principles and the \gls{NETCONF} protocol. The internship involved leveraging the \gls{GNS3} emulation tool to deploy simple network topologies, simulating real-world network environments. Additionally, a software tool was developed using Python to remotely modify the operation of devices through \gls{NETCONF}.
+During this internship at the University of Cantabria under the supervision of Professor Luis Francisco Diez, the objective was to gain hands-on experience in network management using \gls{SDN} principles and the \gls{NETCONF} protocol. The internship involved leveraging the \gls{GNS3} emulation tool to deploy simple network topologies, simulating real-world network environments. Additionally, a software tool was developed using Python to remotely modify the operation of devices through \gls{NETCONF}.
 
 In the subsequent sections of this report, we will delve into the background of software-defined networking, discuss the objectives and scope of the project, outline the methodology employed, present the results and findings, and conclude with reflections and recommendations. Throughout the report, we will explore the practical implementation of \gls{NETCONF} and its effectiveness in managing network devices in a simulated environment.
 
