--- a/Internship Report V2/references.bib
+++ b/Internship Report V2/references.bib
@@ -161,3 +161,11 @@ month = {},
 year = {},
 note = {(Accessed on 08/26/2023)}
 }
+@misc{chat,
+author = {},
+title = {chat.openai.com},
+howpublished = {\url{https://chat.openai.com/}},
+month = {},
+year = {},
+note = {(Accessed on 08/26/2023)}
+}
