--- a/Internship Report V2/title_page.tex
+++ b/Internship Report V2/title_page.tex
@@ -11,13 +11,6 @@
         \textbf{INTERNSHIP REPORT}
             
         \vspace{1.5cm}
-        
-            
-        
-        \large
-        \textbf{Nabil ECH-CHOKHMANY}
-            
-        \vspace{2cm}
             
         \Huge
         Implementing Network Topologies and Creating Software for Remote Device Operation Control via NETCONF
@@ -25,8 +18,12 @@
         \vspace{2cm}
             
         
-            
-        \Large
+        \large
+        Student:
+        \textbf{Nabil ECH-CHOKHMANY}
+
+        \vspace{0.5cm}
+        
         Ensil-Ensci supervisors:
         \textbf{Marie-Sandrine Denis}
 
