--- a/Internship Report V2/title_page.tex
+++ b/Internship Report V2/title_page.tex
@@ -4,26 +4,35 @@
         \includegraphics[width=0.6\textwidth]{Images/ENSIL2.png}
         
 
-        \vspace*{2cm}
+        \vspace*{0.5cm}
         
+    \end{center}
+        
+    \begin{flushleft}
+        \huge
+        
+        Internship\\
+        5th year of Engineering School\\
+        2022 / 2023\\
+    \end{flushleft}
+
+    \begin{center}
+        
+    
+        \vspace{1cm}
             
         \Huge
-        \textbf{INTERNSHIP REPORT}
-            
-        \vspace{1.5cm}
-            
-        \Huge
-        Implementing Network Topologies and Creating Software for Remote Device Operation Control via NETCONF
+        \textbf{Implementing Network Topologies and Creating Software for Remote Device Operation Control via NETCONF}
                     
         \vspace{2cm}
             
         
         \large
         Student:
-        \textbf{Nabil ECH-CHOKHMANY}
+        \textbf{Nabil Ech-Chokhmany}
 
         \vspace{0.5cm}
-        
+
         Ensil-Ensci supervisors:
         \textbf{Marie-Sandrine Denis}
 
@@ -31,7 +40,7 @@
         Tutor:
         \textbf{Luis Francisco Diez}
 
-\vspace{2cm}
+        \vspace{2cm}
 
         \includegraphics[width=0.3\textwidth]{Images/unilim.png} \hfill
         \includegraphics[width=0.14\textwidth]{Images/ELT.png}
